# Test-flight-control-system

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  run_backend_b.sh  venv-A-requirements.txt  venv-B-requirements.txt  前端详细设计-组件接口定义.md
backend_A/: __init__.py  __main__.py  config_loader.py  lifecycle.py  main.py  state.py
backend_A/agents/: alpha.py  beta.py  llm.py  translator_base.py
backend_A/analytics/: __init__.py  fft.py  filter.py  stats.py
backend_A/bus/: __init__.py  bridge.py  protocol.py  registry.py  router.py
backend_A/db/: models.py  repos.py  session.py
backend_A/ipc/: __init__.py  frames.py  server.py
backend_A/models/: schemas.py
backend_A/monitor_trigger/: __init__.py  trigger.py
backend_A/prompts/: alpha.md  beta.md
backend_A/speech/: __init__.py  auth.py  stt_client.py  tts_client.py  xfyun_config.py
backend_A/tools/: beta_tools.py
backend_A/web/: __init__.py  routes.py  sse.py  static.py  ws.py
backend_B/: config_loader.py  lifecycle.py  main.py  state.py
backend_B/bus/: protocol.py  registry.py  router.py
backend_B/ipc/: client.py  frames.py
backend_B/monitor/: component.py  detector.py  thresholds.py  trends.py
backend_B/rosbridge/: adapter.py  node.py  publisher.py  subscriber.py  topics.py
backend_B/solver/: collision.py  (+5 more)
config/: default_constraints.yaml  field.yaml
docs/: todo.md  前端开发计划.md  开发规划.md  架构概要.md  设计目标.md
frontend/: config-default.json  index.html  manifest.json  sw.js
sim-drone/: CMakeLists.txt  package.xml
sim-drone/launch/: fake_drone.launch
sim-drone/scripts/: fake_drone_node.py
(+77 files in other folders)
