<?xml version="1.0"?>
<package format="2">
  <name>sim_drone</name>
  <version>0.1.0</version>
  <description>Fake drone simulation for flight control testing</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
